--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -2,7 +2,7 @@
 
 也就是将中断注入给虚拟机???
 
-# 两个字段: info和error code
+# 1. 两个字段: info和error code
 
 由于异常而引发`VM-exit`时，
 * `VM-exit interruption information` 字段将记录这个异常的**delivery信息**(参见`3.10.2.1`节)，
@@ -12,7 +12,7 @@
 * 将`VM-exit interruption information`字段的值复制给`VM-entry interruption information`字段，
 * 将`VM-exit interruption error code`字段的值复制给`VM-entry nterruption error code`字段(**存在错误码时**) .
 
-# 1. 处理NMI unblocking位
+# 2. 处理NMI unblocking位
 
 `VM-entry interruption information`字段的`bits 30:12`属于**保留位**，在**注入事件时**必须清为0值。
 
@@ -20,7 +20,7 @@
 
 因此，每次**反射异常给guest** 时，VMM需要检查`VM-exit interruption information` 字段的`bit 12`, 做出相应的处理。
 
-# 2. 反射`#DF`异常: 异常嵌套
+# 3. 反射`#DF`异常: 异常嵌套
 
 
 小结: 当Guest在一个异常向量A的delivery期间(可能是由中断导致的)发生了另外一个错误B(不一定是异常), 如果
@@ -30,14 +30,10 @@
 * 当错误B属于**外部中断**、**NMI**、**硬件异常**或者**软件异常**, VMM才会看到`VM-exit interruption information`和`VM-exit interruption error code`记录异常B信息, 直接向量事件类信息字段, 因为错误B直接导致了`VM-exit`
 * 当A和错误B都属于异常且符合下面两类情况(说明B是异常且exception bitmap相应位为1), 这两个异常则会转化成一个`DF`异常, 但是因为VM-exit了, 也记录了A和B的信息, 但是因为语义上已经转化成了`DF`, 所以VMM注入的话必须注入`DF`.
 2. 错误B没有导致`VM-exit`.
-* 如果A和B都属于异常且符合下面两类情况, 这两个异常还是会转化成一个`DF`异常(这个语义和虚拟化没关系), 如果`DF`异常对应的exception bitmap相应位为1, 则会产生VM-exit, 这时候属于直接引发VM-exit, 在
+* 如果A和B都属于异常且符合下面两类情况, 这两个异常还是会转化成一个`DF`异常(这个语义和虚拟化没关系), 如果`DF`异常对应的exception bitmap相应位为1, 则会产生VM-exit, 这时候属于直接引发VM-exit, `IDT-vectoring information` 和 `VM-exit interruption information`不会记录A和B异常, 仅仅在`VM-exit interruption information`和`VM-exit interruption error code`记录`DF`等信息
+* 不属于那两类情况, 则不会转换成`DF`, 就无事发生或属于其他情况
 
-
-异常B直接导致了`VM-exit`(exception bitmap相应位为1时). 当同时满足, 
-
-* VMM看到`VM-exit interruption information`和`VM-exit interruption error code`,    同时符合下面说的两种类型情况, 则VMM需要反射一个`DF`异常
-
-##
+## 3.1. 间接向量事件引发VM-exit
 
 在 guest 发生`VM-exit`后, 当 `IDT-vectoring information` 字段的`bit 31` (valid位) 为1时，表明这个字段所记录的**向量事件**并**不直接引发VM-exit**, 而是由于在**原始异常delivery期间**遇到**某些错误**而导致`VM-exit`(参见3.10.3节). 
 
@@ -45,10 +41,9 @@
 * `IDT-vectoring information` 字段记录**原始向量事件**的**delivery信息**, 
 * `IDT-vectoring error code`字段记录**原始异常的错误码**.
 
-注: 虚拟机原始异常delivery期间遇到错误(不一定是异常), 而这个错误会导致VM-exit. 见3.10说明. 这个时候能确定上面两个字段, 只有delivery期间发生的是**外部中断**、**NMI**、**硬件异常**以及**软件异常**, 才会有`VM-exit interruption information`和`VM-exit interruption error code`信息.
+>注: 虚拟机原始异常delivery期间遇到错误(不一定是异常), 而这个错误会导致VM-exit. 见3.10说明. 这个时候能确定上面两个字段, 只有delivery期间发生的是**外部中断**、**NMI**、**硬件异常**以及**软件异常**, 才会有`VM-exit interruption information`和`VM-exit interruption error code`信息.
 
-## 
-
+## 3.2. `DF`异常且间接VM-exit
 
 在如表 `7-1` 所示的情况下VMM需要反射一个`#DF`(Double Fault)异常**给guest**.
 
@@ -56,13 +51,13 @@
 
 当 **guest** 在**执行过程**中**引发**了表 7-1 中 `IDT-vectoring information` 字段所记录的**异常**，或者**注入**了表中 `IDT-vectoring information` 字段所记录的**硬件异常**（**中断类型！！！为硬件异常！！！**），但这个异常**并不直接导致** `VM-exit`，而在 **delivery 期间**遇到了表 7-1 中 `VM-exit interruption information` 字段所记录的**嵌套异常**而导致 `VM-exit`（另外参见 4.12.2 节）
 
-注: 只有在这个嵌套异常的exception bitmap相应位为1时候, 才会发生VM-exit.
+>注: 只有在这个嵌套异常的exception bitmap相应位为1时候, 才会发生VM-exit.
 
-注: `IDT-vectoring information` 和 `VM-exit  interruption information`两个的信息是发生Vm-exit**进入VMM后能看到的信息**.
+>注: `IDT-vectoring information` 和 `VM-exit  interruption information`两个的信息是发生Vm-exit**进入VMM后能看到的信息**.
 
 也就是下面两类情况，`#DF` 异常最终会被产生。
 
-注: 只有这两种情况, 才会将**两个异常**转换成一个`#DF`异常.
+>注: 只要这两种情况, 就会将**两个异常**转换成一个`#DF`异常.
 
 第 1 类情况：
 
@@ -76,7 +71,7 @@
 
 属于上面两类情况时，在正常情况下**这两个异常**会转化为一个 `#DF` 异常 (double fault，双重故障)。
 
-注: **并未要求一定要发生VM-exit！！！**, 只有当第二个异常对应的exception bitmap位为1才会发生VM-exit
+>注: **并未要求一定要发生VM-exit！！！**, 只有当第二个异常对应的exception bitmap位为1才会发生VM-exit
 
 但如果由于**异常 delivery 期间**引发的**嵌套异常**直接引发了 `VM-exit`，为了模拟 guest 产生的 `#DF` 异常，VMM 需要**注入一个硬件异常 #DF 给 guest**，而**不是嵌套异常！！！**。
 
@@ -94,20 +89,17 @@ VMM 注入 `#DF` 异常时，`VM-entry interruption information` 字段设置为
 
 `VM-entry interruption error code` 字段值设置为 0, 指示**错误码**为 0 值。
 
-## 
+## 3.3. `DF`异常且由`DF`直接导致VM-exit
 
-`IDT-vectoring information` 字段的`bit 31` (valid位) 为0
-
-小结: 这两个异常属于上面的两种情况, 但是嵌套的异常对应的exception bitmap相应位不为1, 所以不会`VM-exit`, 但是会转化成 `#DF` ？？？为什么？？？也就是说只要虚拟机属于上面异常嵌套的两种情况, 都会转换成`DF`, 只是说
-- 如果嵌套异常(第二个异常)会导致`VM-exit`, 这样在VMM会看到`IDT-vectoring information`记录第一个异常 和 `VM-exit interruption information`记录那个嵌套异常, 这个
-
-注: 这时候的`IDT-vectoring information` 和 `VM-exit interruption information`不会记录那两个异常, 而只是在`VM-exit interruption information`记录`DF`
+注: 这时候的`IDT-vectoring information` 和 `VM-exit interruption information`不会记录那两个异常, 而只是在`VM-exit interruption information`记录`DF`, 因为是`DF`造成的直接VM-exit
 
 另一情况是：guest 遇到**异常**但并**不导致 VM-exit**，继而在这个异常 delivery 期间引发了**另一个嵌套异常**，这个嵌套异常**也不导致 Vm-exit**。从而这两个异常被转化为 `#DF` 异常，由于 **exception bitmap** 字段的 `bit 8` 为 1 而**导致 VM-exit**
 
+>注: 所以两个异常转化成`DF`是体系结构语义, 与虚拟化无关.
+
 此时，`VM-exit interruption information` 字段记录的值为 `800008H`，指示由 DF 异常导致 Vm-exit，并且存在 error code。VM-exit interruption error code 字段的值为 0, 指示异常错误码为 0。在这种情况下，VMM 只需要使用前面所说的“使用直接复制方法”注入硬件异常 `#DF` 让 guest 处理.
 
-# 3. 处理 triple fault
+# 4. 处理 triple fault
 
 下面的三种情况会产生**triple fault**(异常属于前面所说的第1类或者第2类情况):
 
@@ -121,9 +113,9 @@ VMM 注入 `#DF` 异常时，`VM-entry interruption information` 字段设置为
 
 当VM处于**shutdown状态**时，**NMI**、**SMI**及**INIT事件**能唤醒**shutdown状态**转为**active状态**(参见4.17.3节)
 
-# 4. 直接反射异常
+# 5. 直接反射异常
 
-当异常由 guest **自身条件所引发**时，在下面的情况下VMM可以直接反射异常给guest处理。
+当异常由 **guest 自身条件所引发**时，在下面的情况下VMM可以直接反射异常给guest处理。
 
 (1)由异常直接导致`VM-exit`时， 也就是`IDT-vectoring information`字段`bit 31`**为0**。
 
