--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -121,6 +121,6 @@ VMM 注入 `#DF` 异常时，`VM-entry interruption information` 字段设置为
 
 (2)不属于表7-1中的第1类和第2类情况时(不产生`#DF`异常)，由于向量事件delivery期间遇到一 个异常而导致VM-exit。
 
-例如，guest 运行过程中引发了#GP异常，#GP 异常不导致VM-xit。但在#GP异常delivery期间遇到了#PF异常而导致VM-exit。 这种情况下并不会产生`#DF`异常，VMM需要直接将#PF异常反射给guest处理。
+例如，guest 运行过程中引发了`#GP`异常，`#GP` 异常不导致VM-xit。但在`#GP`异常delivery期间遇到了`#PF`异常而导致VM-exit。 这种情况下并不会产生`#DF`异常，VMM需要直接将`#PF`异常反射给guest处理。
 
 VMM 可以直接将 VM-exit interruption information 字段的值赋值给 `VM-entryinterruption information` 字段, 将 `VM-exit interruption error code` 字段的值直接赋给 `VM-entry interruption error code` 字段(存在错误码时), 通过事件注入反射给 guest 处理.
