--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/4. IO虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/4. IO虚拟化.md
@@ -47,11 +47,13 @@
 
 ![config](./images/6.png)
 
-⓵ **I/O端口寄存器**. 它被映射到**I/O地址空间**中, 由特殊指令IN/OUT访问. 若指令流处于最高特权级, 整个64KB的I/O地址空间都可自由访问, 驱动程序就是; 当指令流运行在其它特权级, 只有I/O位图允许的端口才能访问.
+⓵ **I/O端口寄存器**. 它被映射到**I/O地址空间**中, 由**特殊指令IN/OUT访问**. 
+* 若指令流处于**最高特权级**, **整个64KB的I/O地址空间**都可自由访问, 驱动程序就是; 
+* 当指令流运行在**其它特权级**, 只有**I/O位图**允许的端口才能访问.
 
-⓶ **MMIO寄存器**. 被映射到**物理地址空间**, 通过页表方式控制访问权限.
+⓶ **MMIO寄存器**. 被映射到**物理地址空间**, 通过**页表方式**控制访问权限.
 
-⓷ **中断**. 由于外设的物理构造, 速度远低于处理器, 往往通过一步时间通知的方式来完成延后的操作, 这个通知机制通常是中断模块实现. 每个允许发生中断的外设会在处理器的中断向量空间分配一个序号.
+⓷ **中断**. 由于外设的物理构造, 速度远低于处理器, 往往通过一步时间通知的方式来完成延后的操作, 这个通知机制通常是**中断模块**实现. 每个**允许发生中断的外设**会在处理器的**中断向量空间**分配一个**序号**.
 
 **I/O端口**、**MMIO**和**中断模块**组成了一个**典型外设提供给软件(！！！这些都是外设的！！！**)的**基本资源**。图中还有一个外设中的特殊模块 --- DMA模块. 
 
@@ -61,7 +63,7 @@
 
 从**处理器**角度看, **外设**是通过**一组I/O资源(端口I/O或MMIO**)来进行**访问**的, 所以**设备相关的虚拟化**又被称为**I/O虚拟化**. 在虚拟环境中, I/O面临的问题是: **外设资源有限**, 为满足**多个客户机OS**需求, VMM必须通过I/O虚拟化方式**复用有限的外设资源**. VMM截获客户OS对设备的访问请求, 然后通过软件方式模拟真实设备. 
 
-I/O虚拟化**不需要完整虚拟化**出**所有外设的所有接口**. 怎么做取决于设备与VMM的策略以及客户机OS的需求. 一个完整的**系统虚拟化方案****在I/O虚拟化**方面需要处理以下几块
+I/O虚拟化**不需要完整虚拟化**出**所有外设的所有接口**. 怎么做取决于设备与VMM的策略以及客户机OS的需求. 一个完整的**系统虚拟化方案在I/O虚拟化**方面需要处理以下几块
 
 ⓵ **虚拟芯片组**. 基于VMM实现上考虑, 这个虚拟芯片组还可承担**ACPI电源管理**相关的一些功能.
 
