--- a/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/1. 可虚拟化架构和不可虚拟化架构.md
+++ b/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/1. 可虚拟化架构和不可虚拟化架构.md
@@ -3,15 +3,15 @@
 
 <!-- code_chunk_output -->
 
-- [虚拟环境的组成](#虚拟环境的组成)
-- [特权指令和敏感指令](#特权指令和敏感指令)
-- [虚拟环境的简单实现](#虚拟环境的简单实现)
-- [虚拟化漏洞的产生](#虚拟化漏洞的产生)
-- [虚拟化漏洞的解决办法](#虚拟化漏洞的解决办法)
+- [1. 虚拟环境的组成](#1-虚拟环境的组成)
+- [2. 特权指令和敏感指令](#2-特权指令和敏感指令)
+- [3. 虚拟环境的简单实现](#3-虚拟环境的简单实现)
+- [4. 虚拟化漏洞的产生](#4-虚拟化漏洞的产生)
+- [5. 虚拟化漏洞的解决办法](#5-虚拟化漏洞的解决办法)
 
 <!-- /code_chunk_output -->
 
-# 虚拟环境的组成
+# 1. 虚拟环境的组成
 
 一般, **虚拟化环境**由**三个部分**构成: **硬件**、**VMM**和**虚拟机**. 
 
@@ -25,7 +25,7 @@
 
 上面蕴含了三层含义(**同质**、**高效**和**资源受控**).
 
-# 特权指令和敏感指令
+# 2. 特权指令和敏感指令
 
 先从**指令**开始着手介绍.
 
@@ -39,19 +39,19 @@
 
 显然, **所有特权指令！！！**都是**敏感指令！！！**, 然而并**不是所有敏感指令！！！**都是**特权指令！！！**.
 
-# 虚拟环境的简单实现
+# 3. 虚拟环境的简单实现
 
 为VMM可以**完全控制系统资源**, **不允许直接执行客户机操作系统的敏感指令(！！！包括了特权指令和敏感指令！！！**）. 即, **敏感指令！！！**必须在**VMM的监控审查下进行！！！**, 或**经由VMM来完成**. 
 
 如果一个系统上**所有敏感指令**都是**特权指令！！！**, 则能用一个很简单的方法实现一个虚拟环境: 将**VMM运行在最高特权级**, **客户机OS**运行在**非最高特权级**上, 当**客户机OS**因执行**敏感指令(此时, 也是特权指令**)而**陷入到VMM**时, **VMM模拟执行引起异常的敏感指令！！！**, 这种方法叫"**陷入再模拟**".
 
-# 虚拟化漏洞的产生
+# 4. 虚拟化漏洞的产生
 
 总之, 判断**一个结构是否可以虚拟化**, 其核心在于该结构**对敏感指令的支持**上. 如果在**某些结构**上**所有敏感指令都是特权指令！！！**, 则它是**可虚拟化的结构**; 否则, 如果它无法支持**在所有敏感指令！！！上触发异常**, 则**不是一个可虚拟化的结构**, 我们称存在"**虚拟化漏洞**".
 
 通过**陷入再模拟敏感指令**的方法是有前提条件的: **所有敏感指令必须都是特权指令**. 否则, 要么**系统的控制信息**会**被虚拟机修改或访问**, 要么**VMM**会**泄露需要模拟的操作**, 影响虚拟化的正确性. 
 
-# 虚拟化漏洞的解决办法
+# 5. 虚拟化漏洞的解决办法
 
 ⓵ **所有指令解释执行**. 最简单最直接的方法是, 如果**所有虚拟化都采用模拟来实现(！！！**), 例如**解释执行**, 就是**取一条指令**, **模拟出这条指令执行的效果**, 再**继续取下一条指令(！！！所有指令, 无论是否敏感指令！！！**), 那么就**不存在所谓陷入不陷入**的问题, 从而避免了虚拟化漏洞. 这种方法不但能适用于模拟与物理机相同体系结构的虚拟机, 而且也能模拟不同体系结构的虚拟机. 这种方法保证了所有指令执行收到VMM的监管, 但它对每条指令不区别对待, 最大缺点是**性能太差**, 不符合虚拟机"高效"特点.
 
