--- Auto-Git Commit ---

--- a/Tools/Visual Studio Code/安装配置.md
+++ b/Tools/Visual Studio Code/安装配置.md
@@ -39,7 +39,8 @@
 - [8. VS Code 调试](#8-vs-code-调试)
   - [8.1. C/C\+\+ 调试](#81-cc-调试)
 - [9. SFTP](#9-sftp)
-- [10. 最终的配置](#10-最终的配置)
+- [10. VSCode Vim中文输入法切换](#10-vscode-vim中文输入法切换)
+- [11. 最终的配置](#11-最终的配置)
 
 <!-- /code_chunk_output -->
 
@@ -432,9 +433,22 @@ gist ID 很关键, 用于在其他电脑同步下载, 所以不能忘记
 }
 ```
 
+# 10. VSCode Vim中文输入法切换
+
+参见`https://github.com/VSCodeVim/Vim#input-method`
+
+1. 先下载安装`im-select`
+2. 配置vim
+
+```
+    "vim.autoSwitchInputMethod.enable": true,
+    "vim.autoSwitchInputMethod.defaultIM": "com.apple.keylayout.ABC",
+    "vim.autoSwitchInputMethod.obtainIMCmd": "/usr/local/bin/im-select",
+    "vim.autoSwitchInputMethod.switchIMCmd": "/usr/local/bin/im-select {im}",
+```
 
 
-# 10. 最终的配置
+# 11. 最终的配置
 
 打开 "首选项" "设置"
 
