--- a/Vim/4. 寄存器.md
+++ b/Vim/4. 寄存器.md
@@ -182,7 +182,7 @@ yft     //复制当前行上光标到第一个t之间的所有内容
 
 # 4. 在普通模式中使用寄存器
 
-在执行**粘贴（p）命令**，或者**复制（y**）和**剪切（x,s,d,c和他们的大写）命令**时，可以在前面**加上 \"{register**}（其中那个{register}代表的是**寄存器的名字**），这样我们就可以使用相应的寄存器了，
+在执行**粘贴（p）命令**，或者**复制（y**）和**剪切（x,s,d,c和他们的大写）命令**时，可以在前面**加上** `"{register}`（其中那个{register}代表的是**寄存器的名字**），这样我们就可以使用相应的寄存器了，
 
 如果**不加**的话，**默认**使用的是**无名寄存器**。
 
@@ -194,25 +194,25 @@ yft     //复制当前行上光标到第一个t之间的所有内容
 
 实现"将 Vim 剪贴板里面的东西粘贴到 Vim 之外的地方？": 只需要将内容复制到剪切板寄存器(+)中即可，其他程序便可以访问到了。
 
-- \"\+yy  // 复制当前行到剪切板
+- `"+yy`  // 复制当前行到系统剪切板
 
-- \"\+p   // 将剪切板内容粘贴到光标后面
+- `"+p`   // 将剪切板内容粘贴到光标后面
 
-- \"ayy  // 复制当前行到寄存器 a
+- `"ayy`  // 复制当前行到寄存器 a
 
-- \"ap   // 将寄存器 a 中的内容粘贴到光标后面
+- `"ap`   // 将寄存器 a 中的内容粘贴到光标后面
 
 系统剪切板中的内容可在其他程序中使用。上面的复制指令都可以配合剪切板进行操作。
 
-- "nyw 复制当前单词到 n 号剪切板（双引号开始） 
+- `"nyw` 复制当前单词到 n 号剪切板（双引号开始） 
 
-- "np 粘贴 n 号剪切板内容到当前位置后 
-
-- "+Y 复制当前行到系统剪切板
-
-- "+ny 复制当前行加下面 n 行到系统剪切板
-
-- "+p 粘贴系统剪切板内容到当前位置后
+- `"np` 粘贴 n 号剪切板内容到当前位置后 
+      `
+- `"+Y` 复制当前行到系统剪切板
+      `
+- `"+ny` 复制当前行加下面 n 行到系统剪切板
+      `
+- `"+p` 粘贴系统剪切板内容到当前位置后
 
 # 5. 在插入模式中使用寄存器
 
