--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/10. VM-exit信息类字段/1. 基本信息类字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/10. VM-exit信息类字段/1. 基本信息类字段.md
@@ -67,6 +67,12 @@ I/O 指令有两类, 分为串(string)指令 INS/OUTS 系列和非串指令 IN/O
 
 ![2020-09-04-14-17-58.png](./images/2020-09-04-14-17-58.png)
 
+exit qualification 字段的 `bits 2:0`记录I/O指令访问的数据大小：
+* 为 0 时，1 个字节，例如：`in al, 92h`。
+* 为 1 时，2 个字节，例如：`in ax, 92h`。
+* 为 3 时，4 个字节，例如：`in eax,92h`。
+
+
 # guest-linear address字段
 
 # guest-physical address字段
