--- Auto-Git Commit ---

--- a/Vim/1. 入门基础.md
+++ b/Vim/1. 入门基础.md
@@ -780,7 +780,7 @@ Windows下面输入“:version”查看结果
 
 - 从这里可以看出，vimrc的执行先于gvimrc。所以我们可以把全部vim配置命令都放在vimrc中，不需要用gvimrc。
 
-如果不知道$HOME或者$VIM具体是哪个目录，可以在vim中用下面的命令查看：
+如果不知道`$HOME`或者`$VIM`具体是哪个目录，可以在vim中用下面的命令查看：
 
 ```
 :echo $VIM 
