--- a/Virtualization/Learning/AMD虚拟化/2. SVM硬件概述/1. 虚拟化支持.md
+++ b/Virtualization/Learning/AMD虚拟化/2. SVM硬件概述/1. 虚拟化支持.md
@@ -1,2 +1,7 @@
 
-AMD的xu'ni'ji
+AMD虚拟机架构的设计是为了:
+* 标记了guest/host的TLB, 以减少虚拟化开销
+* 内存的外部(DMA)访问保护
+* 协助中断处理，虚拟中断支持，和增强的暂停过滤器(pause filter)
+* 拦截客户端中选择的指令或事件的能力
+* VMM和guest之间快速切换的机制
