--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/2. SVM硬件概述/2. 虚拟机模式.md
+++ b/Virtualization/Learning/AMD虚拟化/2. SVM硬件概述/2. 虚拟机模式.md
@@ -5,4 +5,4 @@ Guest Mode
 
 CPUID的function numbers `4000_0000h` – `4000_00FFh` 被保留让软件使用. VMM能够使用使用这个功能号提供接口, 以便将信息从VMM传递到guest. 这类似于使用CPUID指令获取关于物理CPU的信息, VMM使用CPUID 功能号 `400000[FF:00]` 位表示虚拟平台。
 
-特性指示位 `CPUID Fn0000_0001_ECX[31]` 已预留给VMM使用，以表示存在VMM。VMM存在, 则此位为1, 物理CPU的话, 此位设为0。这个位可以被来宾软件探测，以检测它们是否在虚拟机中运行。
+特性指示位 `CPUID Fn0000_0001_ECX[31]` 已预留给VMM使用，以表示存在VMM。VMM存在, 则此位为1, 物理CPU的话, 此位设为0。这个位可以被guest探测，以检测它们是否在虚拟机中运行。
