--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/2. SVM硬件概述/4. 中断支持.md
+++ b/Virtualization/Learning/AMD虚拟化/2. SVM硬件概述/4. 中断支持.md
@@ -4,4 +4,4 @@ Interrupt Support
 
 * **截取物理中断delivery**。VMM可以请求**物理中断**导致一个**正在运行**的guest退出，从而允许VMM处理中断。
 * **虚拟中断**。VMM可以**将虚拟中断注入到客户机**中。在VMM的控制下，客户透明地使用`EFLAGS.IF`**中断掩码位**的**虚拟副本**和APIC任务优先级寄存器(**TPR**)的**虚拟副本**，而不是物理资源。
-* **共享物理APIC**。SVM允许多个客户机共享一个物理APIC，同时防止恶意的或有缺陷的客户机永远不承认高优先级中断(从而关闭其他客户机的中断)。
+* **共享物理APIC**。SVM允许多个客户机共享一个物理APIC，同时防止恶意的或有缺陷的客户机永远不ack高优先级中断(从而关闭其他客户机的中断)。
