--- a/Virtualization/Learning/AMD虚拟化/2. SVM硬件概述/0. 说明.md
+++ b/Virtualization/Learning/AMD虚拟化/2. SVM硬件概述/0. 说明.md
@@ -1,3 +1,5 @@
 
-一般而言, 硬件支持分为两种互补的类别:**虚拟化支持**和**安全支持**。
+SVM处理器支持提供了一组硬件扩展，旨在支持有效地实现虚拟机系统。一般而言, 硬件支持分为两种互补的类别:
 
+* virtualization support, 虚拟化支持
+* security support, 安全支持
