--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/2. SVM硬件概述/2. 安全支持.md
+++ b/Virtualization/Learning/AMD虚拟化/2. SVM硬件概述/2. 安全支持.md
@@ -1,3 +1,6 @@
 
 security support, 安全支持
 
+为了进一步实现安全初始化，SVM提供了额外的系统支持。
+
+认证。SKINIT指令和相关的系统支持(Trusted Platform Module，TPM, 可信平台模块)允许基于安全散列比较的可验证的可信软件(如VMM)启动。
