--- a/Virtualization/Learning/AMD虚拟化/3. SVM处理器和平台扩展/处理器和平台扩展.md
+++ b/Virtualization/Learning/AMD虚拟化/3. SVM处理器和平台扩展/处理器和平台扩展.md
@@ -1,8 +1,8 @@
 SVM Processor and Platform Extensions
 
 SVM硬件扩展可以分为以下类别：
-* **状态开关** - VMRUN，VMSAVE，VMLOAD指令，全局中断标志（GIF）以及操作后者的指令（STGI，CLGI）。 （第449页的“ VMRUN指令”，第472页的“ VMSAVE和VMLOAD指令”，第477页的“全局中断标志，STGI和CLGI指令”。）
-* **拦截** - 允许VMM拦截guest中的敏感操作。 （第455页上的“拦截操作”到第471页上的“杂项拦截”）
+* **状态开关** - VMRUN，VMSAVE，VMLOAD指令，全局中断标志（GIF）以及操作后者的指令（STGI，CLGI）. (`5. VMRUN指令`，第472页的“ VMSAVE和VMLOAD指令”，`17. GIF全局中断标志, STGI和CLGI指令`）
+* **拦截** - 允许VMM拦截guest中的敏感操作. (从`7. 拦截操作`到`14. 杂项拦截`)
 * **中断和APIC辅助** - 物理中断拦截，虚拟中断支持，APIC.TPR虚拟化。 （第477页的“全局中断标志，STGI和CLGI指令”和第480页的“中断和本地APIC支持”）
 * SMM拦截和协助（第483页的“ SMM支持”）
 * 外部（DMA）访问保护（第486页的“外部访问保护”）
