--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/3. SVM处理器和平台扩展/处理器和平台扩展.md
+++ b/Virtualization/Learning/AMD虚拟化/3. SVM处理器和平台扩展/处理器和平台扩展.md
@@ -7,4 +7,4 @@ SVM硬件扩展可以分为以下类别：
 * SMM拦截和协助（`22. SMM支持`）
 * 外部（DMA）访问保护（`24. 外部访问保护`）
 * 嵌套分页支持，用于两个级别的地址转换。(`25. 嵌套分页`)
-* 安全性 - SKINIT指令。 （第501页的“使用SKINIT安全启动”）
+* 安全性 - SKINIT指令。(`27. 使用SKINIT安全启动`)
