--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第1章 开篇/2. 系统虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第1章 开篇/2. 系统虚拟化.md
@@ -2,7 +2,7 @@
 
 系统虚拟化:
 
-![config](./images/2.jpeg)
+![2020-09-06-14-23-28.png](./images/2020-09-06-14-23-28.png)
 
 本质上来讲, **虚拟机系统**和**物理机系统**可以是**完全不同的ISA**。例如, 可以在一个x86物理机上运行一个ARM的虚拟机. 但是，**不同的ISA**使得**虚拟机的每一条指令**都需要**在物理机上模拟执行**，从而造成**较大的性能下降**。当然相同体系结构的系统虚拟化通常会有比较好的性能, VMM也会实现比较简单, 虚拟机大部分指令可在处理器上直接运行, 只有那些需要虚拟化的指令才会由VMM进行处理.
 
