--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/1. 概述.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/1. 概述.md
@@ -6,12 +6,19 @@ Intel VT是Intel平台上**硬件虚拟化技术的总称**, 包含了对**CPU**
 
 图5\-1展示了使用Intel VT技术实现的VMM的典型架构, 上层是通用功能, 如资源调度、系统调度等. 下层是平台相关的部分, 即使用Intel VT实现的处理器虚拟化、内存虚拟化和I/O虚拟化。
 
-- 在**CPU虚拟化**方面, Intel VT提供了**VT\-x**(Intel Virtualization technology for x86)技术; 
+- 在**CPU虚拟化**方面, Intel VT提供了`VT-x`(Intel Virtualization technology for x86)技术; 
+- 中断虚拟化, Intel提供了APICv机制
 - **内存虚拟化**, Intel VT提供了**EPT(Extended Page Table)技术**; 
-- **I/O设备虚拟化**, Intel提供了**VT\-d**(Intel Virtualization Technology for Direct I/O)等技术.
+- **I/O设备虚拟化**, Intel提供了`VT-d`(Intel Virtualization Technology for Direct I/O)等技术.
 
 AMD平台提供了类似的技术.
 
 - 在**处理器虚拟化**方面，AMD SVM提供了与Intel VT-x类似的技术, 即AMD Virtualization(`AMD-V`)；
+- 中断虚拟化, AMD提供了AVIC机制, 且不支持x2APIC, 旨在减少虚拟化环境中的中断开销.
 - 在**内存虚拟化**方面，AMD SVM提供了**NPT(Nested Page Table**)技术；
 - 在I/O设备虚拟化方面，AMD SVM提供了**IOMMU**(I/O Memory Management Unit)技术。
+
+IOMMU, 允许guest通过DMA和中断重映射直接使用
+
+
+参考: https://en.wikipedia.org/wiki/X86_virtualization
