--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/1. 概述.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/1. 概述.md
@@ -6,19 +6,30 @@ Intel VT是Intel平台上**硬件虚拟化技术的总称**, 包含了对**CPU**
 
 图5\-1展示了使用Intel VT技术实现的VMM的典型架构, 上层是通用功能, 如资源调度、系统调度等. 下层是平台相关的部分, 即使用Intel VT实现的处理器虚拟化、内存虚拟化和I/O虚拟化。
 
-- 在**CPU虚拟化**方面, Intel VT提供了`VT-x`(Intel Virtualization technology for x86)技术; 
-- 中断虚拟化, Intel提供了APICv机制
+- 在**CPU虚拟化**方面, Intel VT提供了`VT-x`(Intel Virtualization technology for x86)技术; 中断虚拟化, Intel提供了APICv机制
 - **内存虚拟化**, Intel VT提供了**EPT(Extended Page Table)技术**; 
 - **I/O设备虚拟化**, Intel提供了`VT-d`(Intel Virtualization Technology for Direct I/O)等技术.
 
+注: 中断虚拟化也属于CPU虚拟化一部分.
+
 AMD平台提供了类似的技术.
 
-- 在**处理器虚拟化**方面，AMD SVM提供了与Intel VT-x类似的技术, 即AMD Virtualization(`AMD-V`)；
-- 中断虚拟化, AMD提供了AVIC机制, 且不支持x2APIC, 旨在减少虚拟化环境中的中断开销.
+- 在**处理器虚拟化**方面，AMD SVM提供了与Intel VT-x类似的技术, 即AMD Virtualization(`AMD-V`)；中断虚拟化, AMD提供了AVIC机制, 且不支持x2APIC, 旨在减少虚拟化环境中的中断开销.
 - 在**内存虚拟化**方面，AMD SVM提供了**NPT(Nested Page Table**)技术；
-- 在I/O设备虚拟化方面，AMD SVM提供了**IOMMU**(I/O Memory Management Unit)技术。
+- 在I/O设备虚拟化方面，AMD SVM提供了**IOMMU**(I/O Memory Management Unit)技术, `AMD-Vi`。
 
-IOMMU, 允许guest通过DMA和中断重映射直接使用
+IOMMU, 允许guest通过DMA和中断重映射直接使用外部设备, 例如以太网，加速图形卡和硬盘驱动器控制器。有时称为PCI passthrough。
 
+IOMMU还允许操作系统通过使用内存地址转换来消除反弹缓冲区，该反弹缓冲区使操作系统可以与内存地址空间小于操作系统内存地址空间的外围设备进行通信。同时，IOMMU还允许操作系统和系统管理程序防止故障或恶意硬件损害内存安全性。
+
+- AMD的I/O虚拟化技术叫做`AMD-Vi`, 最初称为 IOMMU.
+- Intel的叫做`VT-d`(Intel Virtualization Technology for Direct I/O).
+
+
+网络虚拟化
+
+Intel提供了`VT-c`
+
+PCI-SIG Single Root I/O Virtualization (SR-IOV), 并非x86特定.
 
 参考: https://en.wikipedia.org/wiki/X86_virtualization
