--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/2. CPU虚拟化的硬件支持.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/2. CPU虚拟化的硬件支持.md
@@ -400,6 +400,8 @@ AMD类似机制叫 `AMD-V`
 
 与 VT-x类似，AMD SVM也引入了根模式和非根模式两种操作模式，非根模式下的敏感指令引起的“陷入”称为VM-Exit，VMM 调度某个客户机运行时，CPU 由根模式切换成非根模式称为VM-Entry。
 
+The CPU flag for AMD-V is "svm". This may be checked in BSD derivatives via dmesg or sysctl and in Linux via /proc/cpuinfo. Instructions in AMD-V include VMRUN, VMLOAD, VMSAVE, CLGI, VMMCALL, INVLPGA, SKINIT, and STGI.
+
 ## 6.2. VMCB
 
 AMD SVM引入了VMCB（Virtual-Machine Control Block，虚拟机控制块），以便更好地支持CPU虚拟化。
