--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/1. 概述.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/1. 概述.md
@@ -33,3 +33,16 @@ Intel提供了`VT-c`
 PCI-SIG Single Root I/O Virtualization (SR-IOV), 并非x86特定.
 
 参考: https://en.wikipedia.org/wiki/X86_virtualization
+
+Hardware-assisted virtualization
+* Central processing unit
+    * Virtual 8086 mode
+    * AMD virtualization (AMD-V)
+    * Intel virtualization (VT-x)
+    * VIA virtualization (VIA VT)
+    * Interrupt virtualization (AMD AVIC and Intel APICv)
+* Graphics processing unit
+* Chipset
+    * I/O MMU virtualization (AMD-Vi and Intel VT-d)
+    * Network virtualization (VT-c)
+        * PCI-SIG Single Root I/O Virtualization (SR-IOV) 
