--- Auto-Git Commit ---

--- a/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/2. 处理器虚拟化.md
+++ b/Virtualization/Learning/系统虚拟化/第3章 虚拟化概述/2. 处理器虚拟化.md
@@ -18,6 +18,8 @@
 
 处理器虚拟化是VMM中最核心的部分, 因为**访问内存**和**I/O指令**本身就是**敏感指令**, 所以**内存虚拟化**和**I/O虚拟化**都依赖于**处理器虚拟化**的正确实现.
 
+处理器虚拟化的宗旨是让虚拟机执行的敏感指令陷入下来后, 能被VMM模拟, 而不直接作用于真实硬件上.
+
 # 1. 指令的模拟
 
 **VMM**运行在**最高特权级**, 可以控制**物理处理器上所有关键资源**; 
