--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/5. VMRUN指令/0. 概述.md
+++ b/Virtualization/Learning/AMD虚拟化/5. VMRUN指令/0. 概述.md
@@ -1,3 +1,11 @@
 VMRUN Instruction
 
 
+VMRUN指令是SVM的基石。VMRUN将对齐4KB页面的物理地址作为虚拟机控制块（VMCB）作为单个参数，该块描述了要执行的虚拟机（来宾）。
+
+VMCB包含：
+* guest中要拦截的指令或事件的列表（例如，写入CR3），
+* 各种控制位，它们指定guest的执行环境或指示在运行来宾代码之前要执行的特殊操作，以及
+* guest处理器状态（例如控制寄存器等）。
+
+请注意，SMM处理程序内部不支持VMRUN，并且行为未定义。
