--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/2. SVM硬件概述/1. 虚拟化支持.md
+++ b/Virtualization/Learning/AMD虚拟化/2. SVM硬件概述/1. 虚拟化支持.md
@@ -10,7 +10,7 @@ virtualization support, 虚拟化支持
 
 # Guest Mode: 虚拟机模式
 
-通过 VMRUN 指令, 处理器会进入一个新的模式. 在 guest mode中, 一些x86指令的行为会有所变化以提高虚拟化.
+通过 VMRUN 指令, 处理器会进入一个新的模式. 在 guest mode中, 一些x86指令的行为会有所变化以支持虚拟化.
 
 CPUID的function numbers `4000_0000h` – `4000_00FFh` 被保留让软件使用. VMM能够使用使用这个功能号提供接口, 以便将信息从VMM传递到guest. 这类似于使用CPUID指令获取关于物理CPU的信息, VMM使用CPUID 功能号 `400000[FF:00]` 位表示虚拟平台。
 
