--- a/Virtualization/Learning/AMD虚拟化/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/5. VMRUN指令/1. 基本操作.md
@@ -1,24 +1,31 @@
 
 
-VMRUN指令具有[rAX]的隐式寻址模式。软件必须使用VMCB的物理地址加载RAX（32位模式下的EAX），VMCB是一个4 KB对齐的页面，描述了要执行的虚拟机。 RAX用于形成地址的部分由当前有效地址大小确定。
-VMCB通过物理地址访问，应映射为写回（WB）内存。
-VMRUN仅在CPL 0处可用。如果CPL大于0，则会引发#GP（0）异常。此外，处理器必须处于保护模式，并且EFER.SVME必须设置为1，否则，将出现#UD异常被提出。
-VMRUN指令在VM_HSAVE_PA MSR中指定的物理地址处，将一些主机处理器状态信息保存在主存储器中的主机状态保存区域中；然后从VMCB状态保存区域加载相应的来宾状态。 VMRUN还从VMCB读取其他控制位，这些控制位允许VMM刷新来宾TLB，向来宾中注入虚拟中断等。
+VMRUN指令具有`[rAX]`的隐式寻址模式。软件必须使用VMCB的物理地址加载RAX（32位模式下的EAX），VMCB是一个4 KB对齐的页面，描述了要执行的虚拟机。RAX用于形成地址的部分由当前有效地址大小确定。
 
-然后，VMRUN指令检查刚加载的来宾状态。如果加载了非法状态，则处理器将返回主机（第15.6节）。
-否则，处理器现在将运行来宾代码，直到发生拦截事件为止，这时处理器将挂起来宾执行并按照VMRUN之后的指令恢复主机执行。这称为#VMEXIT，并在第15.6节中进行了详细描述。
-VMRUN保存或还原最少数量的状态信息，以允许VMM在来宾退出后恢复执行。这使VMM可以快速处理简单的拦截条件。如果必须保存或还原其他来宾状态信息（例如，处理更复杂的拦截或切换到其他来宾），则VMM必须使用VMLOAD和VMSAVE指令来处理其他来宾状态。 （请参阅第15.5.2节）。
+VMCB通过物理地址访问，应映射为写回（WB）内存。
+
+VMRUN仅在CPL 0处可用。如果CPL大于0，则会引发`#GP`（0）异常。此外，处理器必须处于保护模式，并且EFER.SVME必须设置为1，否则，将出现`#UD`异常被提出。
+
+VMRUN指令在VM_HSAVE_PA MSR中指定的物理地址处，将一些主机处理器状态信息保存在主存储器中的主机状态保存区域中；然后从VMCB状态保存区域加载相应的guest状态。 VMRUN还从VMCB读取其他控制位，这些控制位允许VMM刷新guestTLB，向guest中注入虚拟中断等。
+
+然后，VMRUN指令检查刚加载的guest状态。如果加载了非法状态，则处理器将返回主机（第15.6节）。
+
+否则，处理器现在将运行guest代码，直到发生拦截事件为止，这时处理器将挂起guest执行并按照VMRUN之后的指令恢复主机执行。这称为#VMEXIT，并在第15.6节中进行了详细描述。
+
+VMRUN保存或还原最少数量的状态信息，以允许VMM在guest退出后恢复执行。这使VMM可以快速处理简单的拦截条件。如果必须保存或还原其他guest状态信息（例如，处理更复杂的拦截或切换到其他guest），则VMM必须使用VMLOAD和VMSAVE指令来处理其他guest状态。 （请参阅第15.5.2节）。
+
 SavingHostState。为确保主机可以在#VMEXIT之后继续运行，VMRUN至少保存以下主机状态信息：
-•CS.SEL，NEXT_RIP-VMRUN之后的指令的CS选择器和rIP。在#VMEXIT上，主机将在该地址恢复运行。
-•RFLAGS，RAX-主机处理器模式和VMRUN用于寻址VMCB的寄存器。
-•SS.SEL，RSP-主机的堆栈指针。
-•CR0，CR3，CR4，EFER-主机的分页/操作模式。
-•IDTR，GDTR-伪描述符。 VMRUN不会保存或还原主机LDTR。
-•ES.SEL和DS.SEL。
+
+* CS.SEL，NEXT_RIP-VMRUN之后的指令的CS选择器和rIP。在#VMEXIT上，主机将在该地址恢复运行。
+* RFLAGS，RAX-主机处理器模式和VMRUN用于寻址VMCB的寄存器。
+* SS.SEL，RSP-主机的堆栈指针。
+* CR0，CR3，CR4，EFER-主机的分页/操作模式。
+* IDTR，GDTR-伪描述符。 VMRUN不会保存或还原主机LDTR。
+* ES.SEL和DS.SEL。
 
 处理器实现可以在VM_HSAVE_PA MSR指向的存储区域中仅存储主机状态的一部分或不存储任何主机状态，并且可以将某些或全部主机状态存储在隐藏的片上存储器中。不同的实现方式可能会选择保存主机的段寄存器以及选择器的隐藏部分。由于这些原因，软件不得使用主机状态保存区的格式或内容，也不得尝试通过修改主机保存区的内容来更改主机状态。
 LoadingGuestState。保存主机状态后，VMRUN从VMCB加载以下访客状态：
-•CS，rIP-来宾从此地址开始执行。 CS段寄存器的隐藏状态也从VMCB加载。
+•CS，rIP-guest从此地址开始执行。 CS段寄存器的隐藏状态也从VMCB加载。
 •RFLAGS，RAX。
 •SS，RSP-包括SS段寄存器的隐藏状态。
 •CR0，CR2，CR3，CR4，EFER-访客分页模式。因为切换了地址空间，所以用VMRUN写入与页面相关的控制寄存器不会刷新TLB。 （第15.16节。）
@@ -29,15 +36,58 @@ LoadingGuestState。保存主机状态后，VMRUN从VMCB加载以下访客状态
 •V_TPR-访客的虚拟TPR。
 •V_IRQ-该标志指示虚拟中断是否在客户机中挂起。
 •CPL-如果访客处于实模式，则CPL被强制为0；否则，则为0。如果guest虚拟机处于v86模式，则将CPL强制设置为3。否则，将使用VMCB中保存的CPL。
-处理器检查加载的来宾状态的一致性。如果在加载来宾状态时一致性检查失败，则处理器将执行#VMEXIT。有关更多信息，请参阅第459页“规范化和一致性检查”。
-如果根据刚刚加载的寄存器来宾处于PAE分页模式，并且未启用嵌套分页，则处理器还将读取新加载的CR3值所指向的四个PDPE。设置PDPE中的任何保留位也会导致#VMEXIT。
-VMRUN指令有可能加载来宾rIP，该来宾rIP超出来宾代码段的限制或非规范（如果以长模式运行）。如果发生这种情况，则会在来宾内部传递一个#GP错误；超出访客代码段限制的rIP不会被视为非法访客状态。
-加载所有来宾状态并设置拦截器和其他控制位后，处理器会通过将GIF设置为1来重新启用中断。假定VMM软件在执行VMRUN指令之前需要清除GIF，以确保原子状态切换。
-某些处理器模型允许VMM将某些来宾VMCB字段指定为“干净”，这意味着它们尚未相对于当前硬件状态进行修改。这允许硬件优化VMRUN的执行。有关哪些字段可能受此影响的详细信息，请参见15.15节。下面的描述假定所有字段都已加载。
-ControlBits。除了加载访客状态外，VMRUN指令还从VMCB读取多个控制字段；这些字段中的大多数都不会写回到#VMEXIT上的VMCB，因为它们在来宾执行期间无法更改：
-•TSC_OFFSET-访客读取TSC（时间戳计数器）时要添加的偏移量。可以通过更改偏移量来拦截和模拟来宾写入TSC，而无需写入物理TSC。当访客退出主机时，将清除此偏移量。
-•V_INTR_PRIO，V_INTR_VECTOR，V_IGN_TPR-用于描述来宾虚拟中断的字段（请参见第487页的“注入虚拟（INTR）中断”）。
+处理器检查加载的guest状态的一致性。如果在加载guest状态时一致性检查失败，则处理器将执行#VMEXIT。有关更多信息，请参阅第459页“规范化和一致性检查”。
+如果根据刚刚加载的寄存器guest处于PAE分页模式，并且未启用嵌套分页，则处理器还将读取新加载的CR3值所指向的四个PDPE。设置PDPE中的任何保留位也会导致#VMEXIT。
+VMRUN指令有可能加载guestrIP，该guestrIP超出guest代码段的限制或非规范（如果以长模式运行）。如果发生这种情况，则会在guest内部传递一个`#GP`错误；超出访客代码段限制的rIP不会被视为非法访客状态。
+加载所有guest状态并设置拦截器和其他控制位后，处理器会通过将GIF设置为1来重新启用中断。假定VMM软件在执行VMRUN指令之前需要清除GIF，以确保原子状态切换。
+某些处理器模型允许VMM将某些guestVMCB字段指定为“干净”，这意味着它们尚未相对于当前硬件状态进行修改。这允许硬件优化VMRUN的执行。有关哪些字段可能受此影响的详细信息，请参见15.15节。下面的描述假定所有字段都已加载。
+ControlBits。除了加载访客状态外，VMRUN指令还从VMCB读取多个控制字段；这些字段中的大多数都不会写回到#VMEXIT上的VMCB，因为它们在guest执行期间无法更改：
+•TSC_OFFSET-访客读取TSC（时间戳计数器）时要添加的偏移量。可以通过更改偏移量来拦截和模拟guest写入TSC，而无需写入物理TSC。当访客退出主机时，将清除此偏移量。
+•V_INTR_PRIO，V_INTR_VECTOR，V_IGN_TPR-用于描述guest虚拟中断的字段（请参见第487页的“注入虚拟（INTR）中断”）。
 •V_INTR_MASKING-控制是否要虚拟屏蔽中断（在EFLAGS.IF和TPR中）（第15.21节）。
-•运行来宾时要使用的地址空间ID（ASID）。
+•运行guest时要使用的地址空间ID（ASID）。
 •用于在VMRUN期间控制TLB刷新的字段（请参见第15.16节）。
-•描述访客活动拦截的拦截向量。从来宾退出时，内部拦截寄存器将被清除，因此不会拦截任何主机操作。
+•描述访客活动拦截的拦截向量。从guest退出时，内部拦截寄存器将被清除，因此不会拦截任何主机操作。
+
+处理器支持的最大ASID值是特定于实现的。执行CPUID Fn8000_000A后在EBX中返回的值是处理器支持的ASID数量。
+有关使用CPUID指令的更多信息，请参见第64页，第3.3节，“处理器功能标识”。
+VMCB中的细分状态。这些寄存器存储在VMCBina格式中，类似于SMM：基本和限制都已完全扩展；段属性存储为由原始64位（内存中）段描述符中的位55:52和47:40串联而成的12位值；在允许和/或相关的情况下，描述符“ P”位用于发信号通知空段（P = 0）。从VMCB加载段属性（可能已被软件覆盖）可能会导致原本不允许的属性位值。但是，取决于所讨论的段寄存器，硬件实际上只观察到某些属性位：
+•CS-D，L和​​R。
+•SS-B，P，E，W和代码/数据
+•DS，ES，FS，GS — D，P，DPL，E，W和代码/数据。
+•LDTR-仅观察到P位。
+•TR-仅TSS类型（32或16位）是相关的，因为不允许空TSS。
+注意：对于堆栈段属性，在传统模式和兼容模式下会观察到P。在64位模式下，P被忽略，因为所有堆栈段都被视为存在。
+将段属性存储到VMCB中时，VMM应遵循以下规则：
+•对于NULL段，将所有属性位设置为零；否则，将所有属性位设置为零。否则，写入原始64位（内存中）段描述符中的位55:52和47:40的串联。
+•处理器从VMCB中的CPL字段读取当前特权级别。 CS.DPL将匹配CPL字段。
+•在虚拟x86或实模式下时，处理器将忽略VMCB中的CPL字段，并分别强制设置值为3和0。
+在#VMEXIT之后检查细分属性时：
+•测试Present（P）位以检查段是否为NULL；注意，CS和TR永远不会包含NULL段，因此它们的P位将被忽略；
+•从VMCB中的CPL字段中检索CPL，而不是从任何段DPL中检索。
+规范化和一致性检查。 VMRUN指令对guest状态执行一致性检查，并且#VMEXIT对主机状态执行这些一致性检查的适当子集。无效的guest状态组合导致错误代码为VMEXIT_INVALID的#VMEXIT。以下条件被视为非法状态组合：
+•EFER.SVME为零。
+•CR0.CD为零且CR0.NW被置位。
+•CR0 [63:32]不为零。
+•CR3的任何MBZ位置1。
+•CR4的任何MBZ位置1。
+•DR6 [63:32]不为零。
+•DR7 [63:32]不为零。
+•EFER的任何MBZ位置1。
+•EFER.LMA或EFER.LME不为零，并且该处理器不支持长模式。
+•EFER.LME和CR0.PG均已设置且CR4.PAE为零。
+•EFER.LME和CR0.PG都不为零，CR0.PE为零。
+•EFER.LME，CR0.PG，CR4.PAE，CS.L和CS.D均非零。
+•VMRUN拦截位清零。
+•MSR或IOIO拦截表扩展到大于或等于最大支持的物理地址的物理地址。
+•非法事件注入（第15.20节）。
+•ASID等于零。
+VMRUN可以加载PE = 0但PG = 1的CR0guest值，否则这是非法的组合（请参见第15.19节）。
+除了一致性检查外，VMRUN和#VMEXIT还会规范化（即符号扩展为63位）已加载的段寄存器中的所有基地址。
+在支持指定干净字段的处理器模型上，将最终合并的硬件状态用于一致性检查。如果处理器选择忽略该指示，则这可能包括标记为干净的字段中的状态。
+VMRUNandTF / RFBitsinEFLAGS。当考虑EFLAGS中的VMRUN与TF和RF位的交互时，必须区分主机的行为与guest的行为。
+从主机的角度来看，即使在#VMEXIT有效完成VMRUN之前可以执行任意数量的guest指令，VMRUN的行为也像一条指令一样。作为单个主机指令，VMRUN与普通指令一样与EFLAGS.RF和EFLAGS.TF交互。 EFLAGS.RF禁止在VMRUN上执行任何潜在的指令断点匹配，并且EFLAGS.TF在VMRUN在主机端完成后（即，来自guest的#VMEXIT之后）导致#DB陷阱。与任何普通指令一样，VMRUN指令的完成将清除主机EFLAGS.RF位。
+VMCB中的EFLAGS.RF的值会影响第一条guest指令。当VMRUN为EFLAGS.RF加载guest值1时，该值生效并抑制第一条guest指令上的任何潜在（guest）指令断点。当VMRUN在EFLAGS.TF中加载guest值1时，该值不会在VMRUN和第一条guest指令之间引起跟踪陷阱，而是在完成第一条guest指令后引起跟踪陷阱。
+
+EFLAGS的主机值对guest没有影响，EFLAGS的guest值对主机没有影响。
+关于保存在#VMEXIT上的EFLAGS.RF的值，另请参阅第15.7.1节。
