--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/5. VMRUN指令/0. 概述.md
+++ b/Virtualization/Learning/AMD虚拟化/5. VMRUN指令/0. 概述.md
@@ -1,7 +1,7 @@
 VMRUN Instruction
 
 
-VMRUN指令是SVM的基石。VMRUN将对齐4KB页面的物理地址作为虚拟机控制块（VMCB）作为单个参数，该块描述了要执行的虚拟机（来宾）。
+VMRUN指令是SVM的基石。VMRUN将对齐4KB页面的物理地址作为虚拟机控制块（VMCB）作为**单个参数**，该块描述了要执行的虚拟机。
 
 VMCB包含：
 * guest中要拦截的指令或事件的列表（例如，写入CR3），
