--- a/Virtualization/Learning/AMD虚拟化/5. VMRUN指令/1. 基本操作.md
+++ b/Virtualization/Learning/AMD虚拟化/5. VMRUN指令/1. 基本操作.md
@@ -1,12 +1,12 @@
 
 
-VMRUN指令具有`[rAX]`的隐式寻址模式。软件必须使用VMCB的物理地址加载RAX（32位模式下的EAX），VMCB是一个4 KB对齐的页面，描述了要执行的虚拟机。RAX用于形成地址的部分由当前有效地址大小确定。
+VMRUN指令具有`[rAX]`的**隐式寻址模式**。软件必须使用**VMCB的物理地址加载RAX**（32位模式下的EAX），VMCB是一个 4 KB对齐的页面，描述了要执行的虚拟机。RAX用于形成地址的部分由当前有效地址大小确定。
 
 VMCB通过物理地址访问，应映射为写回（WB）内存。
 
 VMRUN仅在CPL 0处可用。如果CPL大于0，则会引发`#GP`（0）异常。此外，处理器必须处于保护模式，并且EFER.SVME必须设置为1，否则，将出现`#UD`异常被提出。
 
-VMRUN指令在VM_HSAVE_PA MSR中指定的物理地址处，将一些主机处理器状态信息保存在主存储器中的主机状态保存区域中；然后从VMCB状态保存区域加载相应的guest状态。 VMRUN还从VMCB读取其他控制位，这些控制位允许VMM刷新guestTLB，向guest中注入虚拟中断等。
+VMRUN指令在`VM_HSAVE_PA MSR`中指定的物理地址处，将一些主机处理器状态信息保存在主存储器中的主机状态保存区域中；然后从VMCB状态保存区域加载相应的guest状态。VMRUN还从VMCB读取其他控制位，这些控制位允许VMM刷新guestTLB，向guest中注入虚拟中断等。
 
 然后，VMRUN指令检查刚加载的guest状态。如果加载了非法状态，则处理器将返回主机（第15.6节）。
 
