--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/2. CPU虚拟化的硬件支持.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/2. CPU虚拟化的硬件支持.md
@@ -407,10 +407,10 @@ The CPU flag for AMD-V is "svm". This may be checked in BSD derivatives via dmes
 AMD SVM引入了VMCB（Virtual-Machine Control Block，虚拟机控制块），以便更好地支持CPU虚拟化。
 
 VMCB相当于Intel VT-x中的VMCS，只是
-* **VMCS**由控制区、Guest 状态区和 Host 状态区三部分构成，
-* VMCB 由控制区、Guest状态区两部分组成。
+* **VMCS** 由控制区、Guest 状态区和 Host 状态区三部分构成，
+* **VMCB** 由控制区、Guest状态区两部分组成。
 
-SVM 的 Host 状态区需要**手工分配内存**，并将地址保存在**HSA MSR**中。
+SVM 的 Host 状态区需要**手工分配内存**，并将地址保存在**VM_HSAVE_PA MSR**中。
 
 ## 6.3. 新的指令
 
