--- a/Virtualization/Learning/AMD虚拟化/3. SVM处理器和平台扩展/处理器和平台扩展.md
+++ b/Virtualization/Learning/AMD虚拟化/3. SVM处理器和平台扩展/处理器和平台扩展.md
@@ -1,7 +1,7 @@
 SVM Processor and Platform Extensions
 
 SVM硬件扩展可以分为以下类别：
-* **状态开关** - VMRUN，VMSAVE，VMLOAD指令，全局中断标志（GIF）以及操作后者的指令（STGI，CLGI）. (`5. VMRUN指令`，`5.2 VMSAVE和VMLOAD指令`，`17. GIF全局中断标志, STGI和CLGI指令`）
+* **状态开关** - VMRUN，VMSAVE，VMLOAD指令，全局中断标志(GIF)以及操作它的指令（STGI，CLGI）. (`5. VMRUN指令`，`5.2 VMSAVE和VMLOAD指令`，`17. GIF全局中断标志, STGI和CLGI指令`）
 * **拦截** - 允许VMM拦截guest中的敏感操作. (从`7. 拦截操作`到`14. 杂项拦截`)
 * **中断和APIC辅助** - 物理中断拦截，虚拟中断支持，APIC.TPR虚拟化。(`17. 全局中断标志，STGI和CLGI指令`和`21. 中断和LAPIC支持`）
 * SMM拦截和协助（`22. SMM支持`）
