--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/0. 概述.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/0. 概述.md
@@ -1,3 +1,3 @@
 Advanced Virtual Interrupt Controller
 
-AMD高级虚拟中断控制器（AVIC）是对AMD VirtualizationTM技术（AMD-V）的重要增强。 在虚拟化环境中，AVIC向每个来宾提供一个符合本地高级可编程中断控制器（APIC）体系结构的虚拟中断控制器。 有关APIC的详细说明，请参见第567页的第16章“高级可编程中断控制器（APIC）”。
+AMD高级虚拟中断控制器（AVIC）是对AMD VirtualizationTM技术（AMD-V）的重要增强。 在虚拟化环境中，AVIC向每个guest提供一个符合本地高级可编程中断控制器（APIC）体系结构的虚拟中断控制器。 有关APIC的详细说明，请参见第567页的第16章“高级可编程中断控制器（APIC）”。
