--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/1. 介绍.md
@@ -1,5 +1,5 @@
 
-在虚拟计算机系统中，每个guest操作系统都需要访问中断控制器以发送和接收设备和核间中断。当**没有硬件加速**时，它会落在虚拟机监视器（VMM）上，以拦截guest发起的访问中断控制器寄存器的尝试，并提供对控制器系统编程接口的直接模拟，从而使guest能够发起和处理中断。VMM使用系统的基础物理和虚拟中断传递机制将中断从I/O设备和虚拟处理器传递到目标guest虚拟处理器，并处理任何所需的中断处理结束。
+在虚拟计算机系统中，每个guest操作系统都需要访问中断控制器以发送和接收设备和核间中断。当**没有硬件加速**时，它会落在虚拟机监视器（VMM）上，以拦截guest发起的访问中断控制器寄存器的尝试，并提供对控制器系统编程接口的直接模拟，从而使guest能够发起和处理中断。VMM使用系统的底层物理和虚拟中断传递机制将中断从I/O设备和虚拟处理器传递到目标guest虚拟处理器，并处理任何所需的中断处理结束。
 
 鉴于现代计算机系统中设备和处理器间中断的高发生率，本地APIC的仿真是VMM的重大负担。
 
