--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/1. 介绍.md
@@ -1,11 +1,13 @@
 
-在虚拟计算机系统中，每个guest操作系统都需要访问中断控制器以发送和接收设备和核间中断。当**没有硬件加速**时，它会落在虚拟机监视器（VMM）上，以拦截guest发起的访问中断控制器寄存器的尝试，并提供对控制器系统编程接口的直接模拟，从而使guest能够发起和处理中断。VMM使用系统的底层物理和虚拟中断传递机制将中断从I/O设备和虚拟处理器传递到目标guest虚拟处理器，并处理任何所需的中断处理结束。
+在虚拟计算机系统中，每个guest操作系统都需要访问中断控制器以发送和接收**设备**和**核间中断**。当**没有硬件加速**时，这个任务会落在**虚拟机监视器**（VMM）上，以**拦截**guest发起的**访问中断控制器寄存器**的尝试，并提供对**控制器系统编程接口**的直接模拟，从而使guest能够发起和处理中断。
+
+VMM使用系统的**底层物理**和**虚拟中断传递机制**将中断从**I/O设备**和虚拟处理器传递到**目标guest虚拟处理器**，并处理任何所需的中断处理结束(即ACK)。
 
 鉴于现代计算机系统中设备和处理器间中断的高发生率，本地APIC的仿真是VMM的重大负担。
 
-通过将硬件加速应用于中断处理的以下组件，AVIC体系结构解决了虚拟环境中guest中断处理的开销：
+通过将**硬件加速**应用于中断处理的以下组件，AVIC体系结构解决了虚拟环境中guest中断处理的开销：
 
-* 为guest操作系统提供对性能至关重要的中断控制器寄存器的访问
+* 为**guest操作系统**提供对性能至关重要的**中断控制器寄存器的访问**
 * 在guest中的虚拟处理器内部和之间启动处理器内和处理器间中断（IPI）
 
 AVIC硬件无法直接解决从I / O设备到虚拟处理器的虚拟中断传递的加速问题。该加速将由I / O内存管理单元（IOMMU）提供。 AVIC体系结构与AMD I / O内存管理单元（IOMMU）兼容。有关IOMMU体系结构的更多信息，请参阅AMD I / O虚拟化技术（IOMMU）规范（订单号48882）。
