--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/1. 介绍.md
@@ -8,8 +8,6 @@ VMM使用系统的**底层物理**和**虚拟中断传递机制**将中断从**I
 通过将**硬件加速**应用于中断处理的以下组件，AVIC体系结构解决了虚拟环境中guest中断处理的开销：
 
 * 为**guest操作系统**提供对性能至关重要的**中断控制器寄存器的访问**
-* 在guest中的**虚拟处理器内部**和之间启动处理器内和处理器间中断（IPI）
-
-处理器内部中断和处理器之间中断
+* 在guest中发起**处理器内部中断**(self ipi?)和**处理器之间中断**
 
 AVIC硬件无法直接解决从I / O设备到虚拟处理器的虚拟中断传递的加速问题。该加速将由I / O内存管理单元（IOMMU）提供。 AVIC体系结构与AMD I / O内存管理单元（IOMMU）兼容。有关IOMMU体系结构的更多信息，请参阅AMD I / O虚拟化技术（IOMMU）规范（订单号48882）。
