--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/1. 介绍.md
@@ -3,7 +3,7 @@
 
 VMM使用系统的**底层物理**和**虚拟中断传递机制**将中断从**I/O设备**和虚拟处理器传递到**目标guest虚拟处理器**，并处理任何所需的中断处理结束(即ACK)。
 
-鉴于现代计算机系统中设备和处理器间中断的高发生率，本地APIC的仿真是VMM的重大负担。
+鉴于现代计算机系统中设备和处理器间中断的高发生率，LAPIC的仿真是VMM的重大负担。
 
 通过将**硬件加速**应用于中断处理的以下组件，AVIC体系结构解决了虚拟环境中guest中断处理的开销：
 
@@ -16,9 +16,9 @@ AVIC硬件无法直接解决从**I/O设备**到**虚拟处理器**的**虚拟中
 
 Local APIC Register Access
 
-本地APIC的系统编程接口包括一组内存映射寄存器。 在非虚拟化环境中，系统软件直接读取和写入这些寄存器以配置中断控制器以及启动和处理中断。 在虚拟化环境中，每个来宾操作系统仍需要访问此系统编程接口，但不拥有底层中断处理硬件。 为了将此功能提供给来宾操作系统，VMM级别的软件会模拟每个来宾虚拟处理器的本地APIC。
+LAPIC的系统编程接口包括一组**内存映射寄存器**(memory-mapped registers)。 在非虚拟化环境中，系统软件直接读取和写入这些寄存器以配置中断控制器以及启动和处理中断。 在虚拟化环境中，每个guest操作系统仍需要访问此系统编程接口，但不拥有底层中断处理硬件。 为了将此功能提供给guest操作系统，VMM级别的软件会模拟每个guest虚拟处理器的LAPIC。
 
-当实例化用于访客的虚拟机时，AVIC体系结构在每个虚拟处理器的访客物理地址（GPA）空间中提供称为访客虚拟APIC（访客vAPIC）的本地APIC的映像。该映像由系统物理地址（SPA）空间中的页面（称为vAPIC备份页面）支持。只要虚拟机持续存在，即使与该后退页面关联的特定虚拟处理器未运行，该后退页面仍固定在系统内存中。来宾设置的对内存映射寄存器的访问由AVIC硬件重定向到此后页。
+当实例化guest虚拟机时，AVIC体系结构在**每个虚拟处理器**的**guest物理地址**（GPA）空间中提供称为guest虚拟APIC（guest vAPIC）的LAPIC的映像。该映像由**系统物理地址**（SPA）**空间**中的**页面**（称为vAPIC backing page, **vAPIC备份页面**）支持。只要虚拟机持续存在，即使与该后退页面关联的特定虚拟处理器未运行，该后退页面仍固定在**系统内存中**。guest设置的对内存映射寄存器的**访问**由**AVIC硬件重定向到此backing页**。
 
-VMM从底页读取来宾编写的配置，控制和命令信息，并将状态信息写入此页面以供来宾读取。允许访客直接读取大多数寄存器，而无需VMM干预。大多数写入都会被拦截，从而使VMM可以处理来自来宾的配置，控制和命令数据并对其执行操作。但是，对于某些经常使用的命令和控制操作，特定的硬件支持允许来宾直接发起中断并完成中断处理，从而在执行对性能至关重要的操作时无需VMM干预。
+VMM从底页读取guest编写的配置，控制和命令信息，并将状态信息写入此页面以供guest读取。允许guest直接读取大多数寄存器，而无需VMM干预。大多数写入都会被拦截，从而使VMM可以处理来自guest的配置，控制和命令数据并对其执行操作。但是，对于某些经常使用的命令和控制操作，特定的硬件支持允许guest直接发起中断并完成中断处理，从而在执行对性能至关重要的操作时无需VMM干预。
 
