--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/1. 介绍.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/1. 介绍.md
@@ -20,5 +20,11 @@ LAPIC的系统编程接口包括一组**内存映射寄存器**(memory-mapped re
 
 当实例化guest虚拟机时，AVIC体系结构在**每个虚拟处理器**的**guest物理地址**（GPA）空间中提供称为guest虚拟APIC（guest vAPIC）的LAPIC的映像。该映像由**系统物理地址**（SPA）**空间**中的**页面**（称为vAPIC backing page, **vAPIC备份页面**）支持。只要虚拟机持续存在，即使与该后退页面关联的特定虚拟处理器未运行，该后退页面仍固定在**系统内存中**。guest设置的对内存映射寄存器的**访问**由**AVIC硬件重定向到此backing页**。
 
-VMM从底页读取guest编写的配置，控制和命令信息，并将状态信息写入此页面以供guest读取。允许guest直接读取大多数寄存器，而无需VMM干预。大多数写入都会被拦截，从而使VMM可以处理来自guest的配置，控制和命令数据并对其执行操作。但是，对于某些经常使用的命令和控制操作，特定的硬件支持允许guest直接发起中断并完成中断处理，从而在执行对性能至关重要的操作时无需VMM干预。
+VMM从backing页读取guest写入的配置、控制和命令信息，并将状态信息写入此页面以供guest读取。
+* guest被允许**直接读取大多数寄存器**，而**无需VMM干预**。
+* **大多数写入都会被拦截**，从而使VMM可以处理来自guest的配置，控制和命令数据并对其执行操作。
+但是，对于某些经常使用的命令和控制操作，**特定的硬件支持**允许guest**直接发起中断**并**完成中断处理**，从而在执行对性能至关重要的操作时**无需VMM干预**。
 
+**软件启动的中断**(。 现代操作系统使用软件中断（self-IPI）来实现软件事件信令，进程间通信和延迟处理的调度。 系统软件通过写入本地APIC的控制寄存器来设置并启动这些中断。 AVIC硬件通过为许多此类操作提供硬件帮助来减少VMM开销。
+
+处理器间中断。 处理器间中断（IPI）被现代操作系统广泛使用，以处理机器内处理器核心之间（或在虚拟化环境中，虚拟机内虚拟处理器之间）的通信。 IPI还用于为诸如跨处理器TLB无效（也称为TLB击落）之类的操作提供信令和同步。 中航工业提供的硬件机制无需VMM干预即可将中断传递到目标虚拟处理器的虚拟中断控制器。
