--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
@@ -1,4 +1,12 @@
 
-以下各节介绍了AVIC的架构。只要观察到的硬件行为符合此描述，AVIC的特定实现就可能偏离此描述。
+以下各节介绍了AVIC的架构。
 
-# 
+# 虚拟LAPIC
+
+Virtualizing the Local APIC
+
+**guest虚拟处理器**通过读写位于**guest物理地址空间**中**4KB页面**中的**一组寄存器**来访问其LAPIC的功能。**AVIC硬件**通过将guest的尝试访问重定向到位于系统物理地址（SPA）空间中的vAPIC支持页面来虚拟化此访问。
+
+注: guest肯定访问的是guest自己的
+
+AVIC硬件检测到guest对其LAPIC寄存器集的尝试访问，并将这些访问重定向到vAPIC支持页面。 如下图所示。
