--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
@@ -5,8 +5,11 @@
 
 Virtualizing the Local APIC
 
-**guest虚拟处理器**通过读写位于**guest物理地址空间**中**4KB页面**中的**一组寄存器**来访问其LAPIC的功能。**AVIC硬件**通过将guest的尝试访问重定向到位于系统物理地址（SPA）空间中的vAPIC支持页面来虚拟化此访问。
+**guest虚拟处理器**通过读写位于**guest物理地址空间**中**4KB页面**中的**一组寄存器**来访问其LAPIC的功能。**AVIC硬件**通过将guest的尝试访问**重定向**到位于**系统物理地址**（System physical address, SPA）空间中的**vAPIC backing页面**来虚拟化此访问。
 
-注: guest肯定访问的是guest自己的
+注: guest肯定访问的是guest自己的地址空间, 这里对lapic的访问使用的是物理地址, 所以是guest物理地址, 但是最终还是会落到真实的物理地址, 这部分也就是AVIC的工作.
 
-AVIC硬件检测到guest对其LAPIC寄存器集的尝试访问，并将这些访问重定向到vAPIC支持页面。 如下图所示。
+AVIC硬件检测到guest对其LAPIC寄存器集的尝试访问，并将这些访问重定向到vAPIC backing页面。 如下图所示。
+
+![2020-09-07-09-37-12.png](./images/2020-09-07-09-37-12.png)
+
