--- a/Virtualization/3. KVM/3. CPU虚拟化/7. cpuid.md
+++ b/Virtualization/3. KVM/3. CPU虚拟化/7. cpuid.md
@@ -47,6 +47,16 @@ AMD:
   98)   0.921 us    |      }
   98)   1.232 us    |    }
   98)   4.278 us    |  }
+
+ 182)               |  cpuid_interception [kvm_amd]() {
+ 182)               |    kvm_emulate_cpuid [kvm]() {
+ 182)   0.190 us    |      kvm_cpuid [kvm]();
+ 182)               |      kvm_skip_emulated_instruction [kvm]() {
+ 182)   0.080 us    |        svm_get_rflags [kvm_amd]();
+ 182)   0.100 us    |        skip_emulated_instruction [kvm_amd]();
+ 182)   0.421 us    |      }
+ 182)   0.892 us    |    }
+ 182)   1.082 us    |  }
 ```
 
 Intel:
@@ -86,4 +96,47 @@ Intel:
  25)   1.634 us    |      }
  25)   1.840 us    |    }
  25)   5.684 us    |  }
+
+
+
+ 60)               |  kvm_emulate_cpuid [kvm]() {
+ 60)   0.148 us    |    kvm_cpuid [kvm]();
+ 60)               |    kvm_skip_emulated_instruction [kvm]() {
+ 60)   0.116 us    |      vmx_get_rflags [kvm_intel]();
+ 60)               |      vmx_skip_emulated_instruction [kvm_intel]() {
+ 60)               |        skip_emulated_instruction [kvm_intel]() {
+ 60)   0.107 us    |          vmx_cache_reg [kvm_intel]();
+ 60)   0.107 us    |          vmx_set_interrupt_shadow [kvm_intel]();
+ 60)   0.532 us    |        }
+ 60)   0.747 us    |      }
+ 60)   1.187 us    |    }
+ 60)   1.704 us    |  }
+
+
+
+ 60)               |  kvm_emulate_cpuid [kvm]() {
+ 60)               |    kvm_cpuid [kvm]() {
+ 60)               |      __kvm_get_msr [kvm]() {
+ 60)               |        vmx_get_msr [kvm_intel]() {
+ 60)               |          kvm_get_msr_common [kvm]() {
+ 60)               |            kvm_pmu_is_valid_msr [kvm]() {
+ 60)   0.385 us    |              intel_msr_idx_to_pmc [kvm_intel]();
+ 60)               |              intel_is_valid_msr [kvm_intel]() {
+ 60)   0.121 us    |                kvm_find_cpuid_entry [kvm]();
+ 60)   0.472 us    |              }
+ 60)   1.493 us    |            }
+ 60)   2.196 us    |          }
+ 60)   2.672 us    |        }
+ 60)   3.104 us    |      }
+ 60)   3.633 us    |    }
+ 60)               |    kvm_skip_emulated_instruction [kvm]() {
+ 60)   0.106 us    |      vmx_get_rflags [kvm_intel]();
+ 60)               |      vmx_skip_emulated_instruction [kvm_intel]() {
+ 60)               |        skip_emulated_instruction [kvm_intel]() {
+ 60)   0.117 us    |          vmx_cache_reg [kvm_intel]();
+ 60)   0.105 us    |          vmx_set_interrupt_shadow [kvm_intel]();
+ 60)   0.542 us    |        }
+ 60)   0.742 us    |      }
+ 60)   1.166 us    |    }
+ 60)   5.116 us    |  }
 ```
