--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/3. CPU虚拟化/7. cpuid.md
+++ b/Virtualization/3. KVM/3. CPU虚拟化/7. cpuid.md
@@ -48,6 +48,8 @@ AMD:
   98)   1.232 us    |    }
   98)   4.278 us    |  }
 
+
+
  182)               |  cpuid_interception [kvm_amd]() {
  182)               |    kvm_emulate_cpuid [kvm]() {
  182)   0.190 us    |      kvm_cpuid [kvm]();
@@ -57,6 +59,28 @@ AMD:
  182)   0.421 us    |      }
  182)   0.892 us    |    }
  182)   1.082 us    |  }
+
+
+ 182)               |  cpuid_interception [kvm_amd]() {
+ 182)               |    kvm_emulate_cpuid [kvm]() {
+ 182)               |      kvm_cpuid [kvm]() {
+ 182)               |        __kvm_get_msr [kvm]() {
+ 182)               |          svm_get_msr [kvm_amd]() {
+ 182)               |            kvm_get_msr_common [kvm]() {
+ 182)               |              kvm_pmu_is_valid_msr [kvm]() {
+ 182)   0.131 us    |                amd_msr_idx_to_pmc [kvm_amd]();
+ 182)   0.090 us    |                amd_is_valid_msr [kvm_amd]();
+ 182)   0.751 us    |              }
+ 182)   1.002 us    |            }
+ 182)   1.223 us    |          }
+ 182)   1.443 us    |        }
+ 182)   1.693 us    |      }
+ 182)               |      kvm_skip_emulated_instruction [kvm]() {
+ 182)   0.080 us    |        svm_get_rflags [kvm_amd]();
+ 182)   0.100 us    |        skip_emulated_instruction [kvm_amd]();
+ 182)   0.421 us    |      }
+ 182)   2.374 us    |    }
+ 182)   2.525 us    |  }
 ```
 
 Intel:
