--- a/Linux/Time/查看时钟中断频率.md
+++ b/Linux/Time/查看时钟中断频率.md
@@ -1,5 +1,8 @@
 看编译内核时选择的值
 
+内核时钟的频率是由CONFIG_HZ决定的，以前默认是100HZ，现在内核默认是250HZ。 而1个jiffy是1个时钟滴答，时间间隔是有CONFIG_HZ决定的，频率是250HZ，也就是周期为4ms。 每4ms，增加一个时钟滴答，也即jiffies++。
+
+
 ```
 # CONFIG_HZ_PERIODIC is not set
 # CONFIG_HZ_100 is not set
@@ -9,4 +12,10 @@ CONFIG_HZ_250=y
 CONFIG_HZ=250
 ```
 
-最下面就是配置的100，如果没有手动更改的话，可以去内核的param.h中找到定义
+如果没有手动更改的话，可以去内核的`/data/build/linux/include/uapi/asm-generic/param.h`中找到定义
+
+```
+#ifndef HZ
+#define HZ 100
+#endif
+```
