--- Auto-Git Commit ---

--- a/Architecture/Learning/dropped/x86汇编语言_从实模式到保护模式/第三部分 32位保护模式/17. 中断和异常的处理与抢占式多任务/1. 中断和异常.md
+++ b/Architecture/Learning/dropped/x86汇编语言_从实模式到保护模式/第三部分 32位保护模式/17. 中断和异常的处理与抢占式多任务/1. 中断和异常.md
@@ -1,3 +1,18 @@
+
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 中断和异常概述](#1-中断和异常概述)
+  - [中断（Interrupt）](#中断interrupt)
+  - [异常（Exception）](#异常exception)
+- [2. 中断描述符表、中断门和陷阱门](#2-中断描述符表-中断门和陷阱门)
+- [3. 中断和异常处理程序的保护](#3-中断和异常处理程序的保护)
+- [4. 中断任务](#4-中断任务)
+- [5. 错误代码](#5-错误代码)
+
+<!-- /code_chunk_output -->
+
 ## 1. 中断和异常概述
 
 当中断和异常发生时，典型结果是迫使处理器将控制从当前正在执行的程序或任务转移到另一个例程或任务中。该例程叫中断处理程序，或者异常处理程序。如果是一个任务，则发生任务切换。
