--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
@@ -33,9 +33,9 @@
 
 local APIC的**timer**是非常简单易用的。它由以下**4个部分组成**。
 
-① `LVT timer`寄存器。
+① `LVT timer`寄存器。LVTT
 
-② `Initial-count`（**初始计数器**）寄存器。
+② `Initial-count`（**初始计数器**）寄存器。TMICT
 
 ③ `Current-count`（**当前计数器**）寄存器, 只读寄存器。
 
