--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
@@ -9,7 +9,11 @@ Virtualizing the Local APIC
 
 注: guest肯定访问的是guest自己的地址空间, 这里对lapic的访问使用的是物理地址, 所以是guest物理地址, 但是最终还是会落到真实的物理地址, 这部分也就是AVIC的工作.
 
-AVIC硬件检测到guest对其LAPIC寄存器集的尝试访问，并将这些访问重定向到vAPIC backing页面。 如下图所示。
+**AVIC硬件**检测到**guest对其LAPIC寄存器集**的尝试**访问**，并将这些访问**重定向到vAPIC backing页面**。如下图所示。
 
 ![2020-09-07-09-37-12.png](./images/2020-09-07-09-37-12.png)
 
+要将虚拟机vAPIC寄存器的guest访问正确重定向到vAPIC支持页面，该硬件需要**两个地址**。 这些是：
+
+• SPA空间中的vAPIC支持页面地址
+•GPA空间中的guest vAPIC基地址（APIC BAR）
