--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
@@ -13,7 +13,9 @@ Virtualizing the Local APIC
 
 ![2020-09-07-09-37-12.png](./images/2020-09-07-09-37-12.png)
 
-要将虚拟机vAPIC寄存器的guest访问正确重定向到vAPIC支持页面，该硬件需要**两个地址**。 这些是：
+要将**虚拟机vAPIC寄存器的guest访问**正确重定向到vAPIC backing页面，该硬件需要**两个地址**。 这些是：
+* **系统物理地址(SPA)空间**中的**vAPIC backing页面地址**
+* **虚拟机物理地址(GPA)空间**中的**guest vAPIC基地址**(APIC BAR)
 
-• SPA空间中的vAPIC支持页面地址
-•GPA空间中的guest vAPIC基地址（APIC BAR）
+**系统软件**负责在嵌套页面表中设置转换，以授予来宾读写访问SPA空间中vAPIC后台页面的权限。 中航工业硬件浏览嵌套页面表以检查权限，但不使用在叶子页面表条目中指定的SPA地址。 而是，AVIC硬件在VMCB的AVIC_BACKING_PAGE指针字段中找到此地址。
+
