--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
@@ -17,5 +17,5 @@ Virtualizing the Local APIC
 * **系统物理地址(SPA)空间**中的**vAPIC backing页面地址**
 * **虚拟机物理地址(GPA)空间**中的**guest vAPIC基地址**(APIC BAR)
 
-**系统软件**负责在**嵌套页面表**中设置转换，以授予来宾读写访问SPA空间中vAPIC后台页面的权限。 中航工业硬件浏览嵌套页面表以检查权限，但不使用在叶子页面表条目中指定的SPA地址。 而是，AVIC硬件在VMCB的AVIC_BACKING_PAGE指针字段中找到此地址。
+**系统软件**负责在**嵌套页面表**(nested page table)中**设置转换关系**，以授予**guest读写**访问**SPA空间**中**vAPIC backing页面**的权限。AVIC硬件walks nested page table(嵌套页面表)以检查权限，但不使用在叶子页面表条目中指定的SPA地址。 而是，AVIC硬件在VMCB的AVIC_BACKING_PAGE指针字段中找到此地址。
 
