--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
@@ -17,5 +17,10 @@ Virtualizing the Local APIC
 * **系统物理地址(SPA)空间**中的**vAPIC backing页面地址**
 * **虚拟机物理地址(GPA)空间**中的**guest vAPIC基地址**(APIC BAR)
 
-**系统软件**负责在**嵌套页面表**(nested page table)中**设置转换关系**，以授予**guest读写**访问**SPA空间**中**vAPIC backing页面**的权限。AVIC硬件walks nested page table(嵌套页面表)以检查权限，但不使用在叶子页面表条目中指定的SPA地址。 而是，AVIC硬件在VMCB的AVIC_BACKING_PAGE指针字段中找到此地址。
+**系统软件**负责在**嵌套页面表**(nested page table)中**设置转换关系**，以授予**guest读写**访问**SPA空间**中**vAPIC backing页面**的权限。AVIC硬件walks nested page table(嵌套页面表)以**检查权限**，但**不使用**在**叶子页表条目**中指定的**SPA地址**。而是，AVIC硬件在**VMCB**的`AVIC_BACKING_PAGE`指针字段中找到此地址。
 
+VMM使用适当的默认APIC寄存器值（包括诸如**APIC版本号**之类的项目）初始化后备页面。 vAPIC支持页面地址和来宾vAPIC基本地址分别存储在VMCB字段AVIC_BACKING_PAGE指针和V_APIC_BAR中。
+
+系统固件将来宾vAPIC基址（和VMCB.V_APIC_BAR）的值初始化为FEE0_0000h。 来宾操作系统在引导时希望在此地址找到本地APIC寄存器集。 如果访客尝试通过写入APIC基址寄存器（MSR 0000_001Bh）来在GPA空间中重新定位本地APIC寄存器基址，则VMM应该拦截该写操作，以更新访客VMCB和GPA部分的V_APIC_BAR字段 虚拟机的嵌套页表中的翻译内容。
+
+在来宾VM的整个生命周期中，vAPIC备份页必须存在于系统物理内存中，因为即使来宾未运行，某些字段也会更新。
