--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
@@ -109,12 +109,25 @@ AVIC Memory Data Structures
 
 AVIC体系结构定义了**三个新的内存驻留数据结构**。这些结构中的**每一个**都被定义为恰好适合**一个4 KB页面**。未来的实现可能会扩大规模。
 
-Virtual APIC Backing Page。系统中的每个虚拟处理器都分配有一个虚拟APIC支持页面（vAPIC支持页面）。guest对guest物理地址空间中的本地APIC寄存器块的访问将重定向到系统内存中的vAPIC备用页面。 AVIC硬件和VMM使用vAPIC支持页面来模拟本地APIC。有关详细说明，请参见第517页的“虚拟APIC寄存器访问”。
+## 虚拟APIC backing页: Virtual APIC Backing Page
 
-Physical APIC ID Table。物理APIC ID表由VMM设置和维护，并由硬件用于定位适当的vAPIC支持页面，该页面将用于根据guest物理APIC ID传递中断。每个虚拟机必须提供一个物理APIC ID表。
+**虚拟APIC backing页**(Virtual APIC Backing Page)。系统中的**每个虚拟处理器**都分配有**一个虚拟APIC backing页面**（vAPIC backing page）。guest对guest物理地址空间中的LAPIC寄存器块的访问将重定向到系统内存中的vAPIC backing页面。 AVIC硬件和VMM使用vAPIC backing页面来模拟LAPIC。有关详细说明，请参见第517页的“虚拟APIC寄存器访问”。
 
-guest物理APIC ID用作此表的索引。每个条目都包含一个指向虚拟处理器的vAPIC支持页面的指针，一个指示虚拟处理器当前是否已在物理内核上调度的位以及（如果是）该内核的物理APIC ID。
+## 物理APIC ID表: Physical APIC ID Table
 
-该表的长度固定为4 KB，每个虚拟机最多允许512个虚拟处理器。但是，在此版本的体系结构中，每个guest的虚拟处理器的最大数量限制为256。可以使用稀疏方式使用有效位填充物理ID表，以指示分配的ID。最后一个有效条目的索引存储在VMCB AVIC_PHYSICAL_MAX_INDEX字段中。
+**物理APIC ID表**(Physical APIC ID Table)。物理APIC ID表由**VMM设置和维护**，并由**硬件**用于**定位适当的vAPIC backing页面**，该页面将用于根据**guest物理APIC ID**传递中断。**每个虚拟机**必须提供**一个物理APIC ID表**。
 
-指向该表的指针在VMCB中维护。由于每个虚拟机只有一个物理APIC ID表，因此对于虚拟机中的每个虚拟处理器，此指针的值都相同。
+**guest物理APIC ID**用作此表的**索引**。每个条目都包含一个指向**虚拟处理器**的**vAPIC backing页面**的指针，一个指示**虚拟处理器**当前**是否已在物理CPU上调度**的位以及（如果是）该**物理CPU**的**物理APIC ID**。
+
+该表的长度固定为**4 KB**，**每个虚拟机**最多允许**512个虚拟处理器**。但是，在此版本的体系结构中，**每个guest**的**虚拟处理器**的最大数量限制为**256**。可以使用**稀疏方式**(sparse manner)使用**有效位填充物理ID表**，以指示分配的ID。**最后一个有效条目**的**索引**存储在**VMCB** `AVIC_PHYSICAL_MAX_INDEX`字段中。
+
+指向该表的指针在VMCB中维护。由于**每个虚拟机只有一个物理APIC ID表！！！**，因此对于虚拟机中的**每个虚拟处理器**，**此指针的值都相同**。
+
+表中的每个条目具有以下格式：
+
+![2020-09-07-21-28-33.png](./images/2020-09-07-21-28-33.png)
+
+
+![2020-09-07-21-30-32.png](./images/2020-09-07-21-30-32.png)
+
+LAPIC ID表(Logical APIC ID Table). 
