--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
@@ -127,7 +127,14 @@ AVIC体系结构定义了**三个新的内存驻留数据结构**。这些结构
 
 ![2020-09-07-21-28-33.png](./images/2020-09-07-21-28-33.png)
 
-
 ![2020-09-07-21-30-32.png](./images/2020-09-07-21-30-32.png)
+
+请注意，IR位置1时表示VMM已分配一个物理核心来承载此虚拟处理器。 该位不区分以访客模式（主动执行访客软件）或以虚拟机监控程序模式（已暂停访客软件的执行）运行的物理处理器。
+
+![2020-09-07-21-32-07.png](./images/2020-09-07-21-32-07.png)
+
+由于将目的地FFh用于指定广播，因此保留了物理APIC ID FFh。 该表的高2048个字节已保留，应设置为零。
+
+
 
 LAPIC ID表(Logical APIC ID Table). 
