--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
@@ -145,3 +145,14 @@ LAPIC ID表(Logical APIC ID Table).
 
 # 中断传递: Interrupt Delivery
 
+虚拟中断有两种基本类型：处理器间中断（IPI）和I / O设备中断（设备中断）。 guest系统软件写入ICRL寄存器时，将启动IPI。 设备中断由已由guest系统软件（通常是设备驱动程序）编程的I / O设备启动，以将表示事件的消息发送到特定的guest物理处理器。 该消息通常包括指示事件性质的中断向量号。
+以下各节讨论当虚拟处理器发信号通知IPI时由AVIC硬件采取的措施，以及当设备发信号通知虚拟中断时由I / O虚拟化硬件采取的措施。
+
+处理器间中断(Interprocessor Interrupts). 要处理IPI，AVIC硬件, 请执行以下步骤：
+
+1. 如果命令中编码的 `destination-shorthand` 为01b（即self），请更新后备中的IRR
+页面上，向自己发出门铃信号，并跳过其余步骤。
+2.如果目标快捷方式不为零，或者目标字段为FFh（即广播），请跳至步骤4。
+3.如果对目的地进行了逻辑寻址，请使用逻辑APIC ID表为每个逻辑ID查找来宾物理APIC ID。
+如果该输入无效（V位被清除），则导致#VMEXIT。
+如果该条目有效，但包含无效的后页指针，则导致#VMEXIT。
