--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
@@ -148,11 +148,22 @@ LAPIC ID表(Logical APIC ID Table).
 虚拟中断有两种基本类型：处理器间中断（IPI）和I / O设备中断（设备中断）。 guest系统软件写入ICRL寄存器时，将启动IPI。 设备中断由已由guest系统软件（通常是设备驱动程序）编程的I / O设备启动，以将表示事件的消息发送到特定的guest物理处理器。 该消息通常包括指示事件性质的中断向量号。
 以下各节讨论当虚拟处理器发信号通知IPI时由AVIC硬件采取的措施，以及当设备发信号通知虚拟中断时由I / O虚拟化硬件采取的措施。
 
-处理器间中断(Interprocessor Interrupts). 要处理IPI，AVIC硬件, 请执行以下步骤：
+## 处理器间中断: IPI
 
-1. 如果命令中编码的 `destination-shorthand` 为01b（即self），请更新后备中的IRR
-页面上，向自己发出门铃信号，并跳过其余步骤。
-2.如果目标快捷方式不为零，或者目标字段为FFh（即广播），请跳至步骤4。
-3.如果对目的地进行了逻辑寻址，请使用逻辑APIC ID表为每个逻辑ID查找来宾物理APIC ID。
-如果该输入无效（V位被清除），则导致#VMEXIT。
-如果该条目有效，但包含无效的后页指针，则导致#VMEXIT。
+处理器间中断(Interprocessor Interrupts, IPI). 要处理IPI，AVIC硬件会执行以下步骤：
+
+1. 如果命令中编码的 `destination-shorthand` 为**01b**（即**self**），请更新backing 页面中的IRR，向自己发出门铃(doorbell)信号，并跳过其余步骤。
+2. 如果`destination-shorthand`不为零，或者目标字段(destination field)为**FFh**（即**广播**），请跳到步骤4。
+3. 如果对目标(destination)进行了**逻辑寻址**，请使用**逻辑APIC ID表**为**每个逻辑ID**查找**guest物理APIC ID**。
+    * 如果该表项无效(V位被清除)，则导致`#VMEXIT`。
+    * 如果该条目有效，但包含无效的backing页面指针，则导致`#VMEXIT`。
+4. 使用**guest物理APIC ID**作为表的索引，在**Physical APIC表**中查找vAPIC backing页面地址。
+    * 对于定向中断(directed interrupts)，如果所选表条目无效，则导致`#VMEXIT`。 
+    * 对于广播IPI，无效条目将被忽略。
+5. 对于**每个有效的目的地**：
+- 在每个目标的vAPIC backing页面中以原子方式设置适当的IRR位。
+- 检查每个目的地的IsRunning状态。
+- 如果设置了目标IsRunning位，则使用物理APIC ID表中的主机物理核心号发送门铃消息。
+6. 如果将任何目的地标识为当前未在物理核心上调度（即，未设置该虚拟处理器的IsRunning位），则导致#VMEXIT。
+
+有关与上面列出的#VMEXIT例外相关的新退出代码，请参阅第531页的“ AVIC IPI交付未完成”。
