--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
@@ -167,3 +167,16 @@ LAPIC ID表(Logical APIC ID Table).
 6. 如果将任何目的地标识为当前未在物理核心上调度（即，未设置该虚拟处理器的IsRunning位），则导致#VMEXIT。
 
 有关与上面列出的#VMEXIT例外相关的新退出代码，请参阅第531页的“ AVIC IPI交付未完成”。
+
+## 设备中断: Device Interrupts
+
+I / O设备中断向虚拟处理器的传递是由具有虚拟中断功能的IOMMU处理的。 为了传递虚拟中断，I / O虚拟化硬件执行以下步骤：
+
+1. I / O设备收到一条中断消息，标识源设备和中断向量号。
+2. I / O虚拟化硬件使用设备ID来确定作为设备中断目标的核心的guest物理APIC ID。
+3. I / O虚拟化硬件使用guest物理APID ID索引到物理APIC ID表中，以找到vAPIC支持页面的SPA。如果I / O虚拟化硬件访问了物理APIC ID表中的无效条目（清除了V位），则I / O虚拟化硬件将中止虚拟中断传递并记录错误。
+4. I / O虚拟化硬件执行任何所需的向量编号转换。
+5. I / O虚拟化硬件自动设置vAPIC备用页面中与向量相对应的IRR中的位。
+6. 如果作为中断目标的虚拟处理器当前未在其分配的物理内核上运行，则当虚拟处理器再次处于活动状态时，将显示虚拟中断。 I / O虚拟化硬件可以向VMM提供有关设备中断的其他信息，以帮助虚拟处理器调度决策。
+
+如果作为中断目标的虚拟处理器是在物理处理器上调度的（由设置的Physical APIC ID表条目的IsRunning位指示），则I / O虚拟化硬件将使用表条目中的主机物理APIC ID来向相应的处理器内核发送门铃信号，以表明需要处理中断。
