--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
@@ -170,13 +170,21 @@ LAPIC ID表(Logical APIC ID Table).
 
 ## 设备中断: Device Interrupts
 
-I/O设备中断向虚拟处理器的传递是由具有**虚拟中断功能**的**IOMMU**处理的。 为了传递虚拟中断，I / O虚拟化硬件执行以下步骤：
+**I/O设备中断向虚拟处理器的传递过程**是由具有**虚拟中断功能**的**IOMMU**处理的。 为了传递虚拟中断，I/O虚拟化硬件(IOMMU)执行以下步骤：
 
-1. I / O设备收到一条中断消息，标识源设备和中断向量号。
-2. I / O虚拟化硬件使用设备ID来确定作为设备中断目标的核心的guest物理APIC ID。
-3. I / O虚拟化硬件使用guest物理APID ID索引到物理APIC ID表中，以找到vAPIC支持页面的SPA。如果I / O虚拟化硬件访问了物理APIC ID表中的无效条目（清除了V位），则I / O虚拟化硬件将中止虚拟中断传递并记录错误。
-4. I / O虚拟化硬件执行任何所需的向量编号转换。
-5. I / O虚拟化硬件自动设置vAPIC备用页面中与向量相对应的IRR中的位。
-6. 如果作为中断目标的虚拟处理器当前未在其分配的物理内核上运行，则当虚拟处理器再次处于活动状态时，将显示虚拟中断。 I / O虚拟化硬件可以向VMM提供有关设备中断的其他信息，以帮助虚拟处理器调度决策。
+1. **从I/O设备**来的**中断消息**会标识**源设备**和**中断向量号**。
+2. I/O虚拟化硬件使用**设备ID**来确定作为设备中断**目标的core**的**guest物理APIC ID**。
+3. I/O虚拟化硬件使用**guest物理APIC ID**索引到**物理APIC ID表**中，以找到**vAPIC backing页面**的**SPA**。如果I/O虚拟化硬件访问了**物理APIC ID表**中的**无效条目**（清除了V位），则**I/O虚拟化硬件**将**中止虚拟中断传递**并记录错误。
+4. I/O虚拟化硬件执行任何所需的**向量编号转换**。
+5. I/O虚拟化硬件**自动**设置**vAPIC backing页面**中与向量相对应的**IRR**中的**位**。
+6. 如果作为中断目标的虚拟处理器当前未在其分配的物理内核上运行，则当虚拟处理器再次处于活动状态时，将显示虚拟中断。I/O虚拟化硬件可以向VMM提供有关设备中断的其他信息，以帮助虚拟处理器调度决策。
 
 如果作为中断目标的虚拟处理器是在物理处理器上调度的（由设置的Physical APIC ID表条目的IsRunning位指示），则I / O虚拟化硬件将使用表条目中的主机物理APIC ID来向相应的处理器内核发送门铃信号，以表明需要处理中断。
+
+1. An interrupt message arrives from the I/O device identifying the source device and interrupt vector number.
+2. I/O virtualization hardware uses the device ID to determine the guest physical APIC ID of the core that is the target of the device interrupt.
+3. I/O virtualization hardware uses the guest physical APID ID to index into the Physical APIC ID Table to find the SPA of the vAPIC backing page. If the I/O virtualization hardware accesses an entry in the Physical APIC ID Table that is not valid (V bit is cleared), the I/O virtualization hardware aborts the virtual interrupt delivery and logs an error.
+4. I/O virtualization hardware performs any required vector number translation.
+5. I/O virtualization hardware atomically sets the bit in the IRR in the vAPIC backing page that corresponds to the vector.
+6. If the virtual processor that is the target of the interrupt is not currently running on its assigned physical core, the virtual interrupt will be presented when the virtual processor is made active again. I/O virtualization hardware may provide additional information to the VMM about the device interrupt to aid in virtual processor scheduling decisions.
+If the virtual processor that is the target of the interrupt is scheduled on a physical processor (indicated by the IsRunning bit of the Physical APIC ID table entry being set), I/O virtualization hardware uses the host physical APIC ID in the table entry to send a doorbell signal to the corresponding processor core to signal that an interrupt needs to be processed.
