--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
@@ -210,3 +210,6 @@ vAPIC寄存器组地址范围内的大多数其他写访问尝试都会导致具
 
 ## 门铃机制: Doorbell Machanism
 
+每个core提供门铃机制，**其他core**(用于**IPI**)和**IOMMU**(用于**设备中断**)使用该**门铃机制**向**目标物理core**的VMM发出信号，告知**需要处理虚拟中断**。 确切的机制是特定于实现的，但是必须加以保护，以防止其他内核上运行的非特权软件的访问以及外部设备的直接访问。
+
+在guest模式下接收到门铃后，接收核心上的硬件会评估vAPIC备份页面中当前正在运行的虚拟处理器的vAPIC状态，并根据需要将中断注入guest。
