--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
@@ -216,4 +216,7 @@ vAPIC寄存器组地址范围内的大多数其他写访问尝试都会导致具
 
 ### 门铃注册: Doorbell Register
 
-门铃机制的**系统编程接口**是通过**MSR提供**的。通过将与该内核相对应的物理APIC ID写入门铃寄存器（MSR C001_011Bh），可以启动向另一个内核发送门铃信号。 该寄存器的格式如下图15-22所示。
+门铃机制的**系统编程接口**是通过**MSR提供**的。通过将与**该core**相对应的**物理APIC ID**写**入门铃寄存器**（`MSR C001_011Bh`），可以**启动向另一个core发送门铃信号**。 该寄存器的格式如下图15-22所示。
+
+![2020-09-08-09-56-44.png](./images/2020-09-08-09-56-44.png)
+
