--- Auto-Git Commit ---

--- a/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
+++ b/Virtualization/Learning/AMD虚拟化/29. AVIC/2. 架构定义.md
@@ -220,3 +220,8 @@ vAPIC寄存器组地址范围内的大多数其他写访问尝试都会导致具
 
 ![2020-09-08-09-56-44.png](./images/2020-09-08-09-56-44.png)
 
+**写入该寄存器**会使**门铃信号**发送到**指定的物理core**。 从该寄存器**读取**的任何尝试**均会**导致`#GP`。
+
+### 门铃信号处理: Processing of Doorbell Signals
+
+硬件可以识别传递给正在运行的guest的门铃信号，而不管它是否可以作为虚拟中断立即注入到guest中。 在下一个VMRUN上，虚拟中断传递机制评估guest的vAPIC支持页的IRR寄存器的状态，以找到优先级最高的未决中断，并在中断屏蔽和优先级允许的情况下将其注入。
